--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,11 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@breezystack/lamejs": "^1.2.7",
     "@tailwindcss/vite": "^4.1.8",
     "axios": "^1.9.0",
     "firebase": "^11.9.1",
     "homepage_with_recorder": "file:",
-    "lamejs": "^1.2.1",
     "lucide-react": "^0.539.0",
     "music-metadata-browser": "^2.5.11",
     "react": "^19.1.0",
