--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@breezystack/lamejs": "^1.2.7",
+    "@sentry/react": "^10.33.0",
+    "@sentry/tracing": "^7.120.4",
     "@tailwindcss/vite": "^4.1.8",
     "axios": "^1.11.0",
     "firebase": "^11.9.1",
